kubernetes/paperless/03-deployments.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: paperless
  labels:
    app: paperless

spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: jonaswinkler/paperless-ng:latest
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: volume-data
            - mountPath: /usr/src/paperless/media
              name: volume-media
            - mountPath: /usr/src/paperless/consume
              name: volume-consume
          resources:
            requests:
              cpu: "500m"
              memory: "500Mi"
            limits:
              cpu: "1000m"
              memory: "1000Mi"
      volumes:
        - name: volume-data
          persistentVolumeClaim:
            claimName: pvc-paperless-data
        - name: volume-media
          persistentVolumeClaim:
            claimName: pvc-paperless-media
        - name: volume-consume
          persistentVolumeClaim:
            claimName: pvc-paperless-consume
