kubernetes/paperless/02-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  labels:
    app: paperless

spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: paperless
