kubernetes/paperless/04-ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  labels:
    app: paperless

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.#HOMELAB_DOMAIN#`)
      kind: Rule
      services:
        - name: paperless
          port: 8000
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
